welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: illegal start of simple expression
def getMotiF()
^